feat: Java LSP Phase 2A実装 - v1.0.9リリース
✨ 新機能
- 🧪 Java LSP統合（検証中）
  - Eclipse JDT Language Server統合による基本診断機能
  - java_lsp_basic_diagnostics: 基本状態確認・エラー統計ツール
  - java_lsp_diagnostics: 包括的診断・トラブルシューティングツール
  - Phase 2A エラーハンドリングシステム実装
    - 基本的なエラー記録とカウント機能
    - LSP接続状態の監視とヘルスチェック
    - 診断結果の日本語表示対応

🚀 プロジェクトメモリ管理システム改善
- project_update_workflow → project_memory_update_workflow に改名
- プロジェクトメモリ分類システムの導入（generic/project_specific/template）
- 各分類に特化した適切なプロンプト自動生成システム

⚡ Swift LSP パフォーマンス向上
- swift --version コマンドタイムアウトを120秒→3秒に最適化
- vitest設定でテストタイムアウトを10秒に延長
- Swift LSP関連テスト全10件の安定動作実現

📈 テスト品質大幅向上
- 全テスト数: 282 → 551テスト（196%増加）
- テスト成功率: 100%維持（失敗0件）
- DiffLoggerテストの非同期処理対応とmock修正

🔧 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>